--- a/nilmProject/nilmProject.conf
+++ b/nilmProject/nilmProject.conf
@@ -4,7 +4,7 @@
 upstream django {
    server 0.0.0.0:8000;  # 和ini文件中的socket保持一致
    # for a file socket
-#   server unix:///home/houpc16/djangoenv/nilmProject/nilmProject.sock;
+   #server unix://home/houpc16/djangoenv/nilmProject/nilmProject.sock;
    #server 127.0.0.1:8000; 
    # for a web port socket (wh'll use this first)
 }
@@ -18,10 +18,15 @@ proxy_busy_buffers_size 128k;
 server {
     # ther port your site will be served on
     listen      8088;
+    listen 443 ssl;
     # the domain name it will serve for
-    server_name WebServer;
+    ssl_certificate /etc/letsencrypt/live/nilm.devkit.cc/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/nilm.devkit.cc/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    server_name nilm.devkit.cc
+    #server_name WebServer;
     charset     utf-8;
-
 
     # max upload size
     client_max_body_size 75M;
@@ -47,12 +52,15 @@ server {
         }
 
         uwsgi_pass  127.0.0.1:8000;
+        #uwsgi_pass nilmProject
         include     /home/houpc16/djangoenv/nilmProject/uwsgi_params;
         uwsgi_send_timeout 900s;
         uwsgi_read_timeout 900s;
         uwsgi_connect_timeout 60;
+        #proxy_pass http://django
 #        proxy_send_timeout 300;
 #        proxy_read_timeout 300;
 #        proxy_connect_timeout 300;
     }
 }
+
